# dynamic-disequilibrium

./: .gitignore  README.md
arxiv/: README.md
arxiv/edem/: build.sh  pack.sh
arxiv/edem/sections/: 00_abstract.tex  01_introduction.tex  02_background.tex  03_framework.tex  04_implementation.tex  05_experiments.tex  06_discussion.tex  07_extensions.tex  08_conclusion.tex  A2_parameters.tex
drafts/: SJSU - Disequilibria in markets.md  SJSU EDEM - Supply and Demand as a Stochastic Process.md
drafts/netlogo/: README.md
paper/: build.sh  check_refs.py  main.tex  references.bib
paper/figures/: run1_stable_summary.md  run2_high_error_summary.md  run3_patience_summary.md  run4_low_density_summary.md  run5_shock_summary.md  run6_bubble_summary.md  run7_balancer_sweep_summary.md  run8_double_exp_summary.md  run9_sensitivity_summary.md
paper/sections/: 04_implementation.tex  A1_odd_protocol.tex
python_simulation/: CITATION.cff  LICENSE  README.md  pyproject.toml
python_simulation/edem/: __init__.py  agents.py  balancer.py  clearing.py  de_model.py  edem_model.py  home.py
python_simulation/experiments/: _runner.py  run1_stable.py  run2_high_error.py  run3_patience.py  run4_low_density.py  run5_shock.py  run6_bubble.py  run7_balancer_sweep.py  run8_double_exp.py  run9_sensitivity.py
python_simulation/tests/: test_balancer.py  test_clearing.py  test_de_model.py  test_edem_model.py  test_shocks.py
